some small fix and renaming